--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <body>
     <h1><b>V_code website</b> </h1>
-    <img src="./imges/v_code.png" width="150">
+    <img src="./images/v_code.png" width="150">
     <br>
     <br>
     welcome to my website , int this website Iam explan you about programming langauge, We have four populor langauge .
@@ -34,7 +34,7 @@
     </li>
     </ol>
     <h1 id="c++">c++</h1>
-    <img src="./imges/c++ img.jpg" width="100">
+    <img src="./images/cpp.jpg" width="100"">
     <p>
         C++ is a powerful, high-performance programming language that extends the C language with advanced features such
         as object-oriented programming. Created by Bjarne Stroustrup in the early 1980s, it has become one of the most
@@ -48,7 +48,7 @@
 
     </p>
     <h1 id="py">python</h1>
-    <img src="./imges/python.jpg" width="100">
+    <img src="./images/python.jpg" width="100">
     <p>
         Python is a high-level, versatile programming language known for its simplicity and readability. Created in the
         early 1990s by Guido van Rossum, it has become one of the most popular languages worldwide due to its clear
@@ -61,7 +61,7 @@
 
     </p>
     <h1 id="ja">java</h1>
-    <img src="./imges/java.png" width="100">
+    <img src="./images/java.png" width="100">
     <p>
         Java is a widely used, high-level programming language designed for portability, reliability, and ease of use.
         Developed by Sun Microsystems in the mid-1990s, Java quickly became one of the most popular languages thanks to
@@ -74,7 +74,7 @@
 
     </p>
     <h1 id="ht">Html</h1>
-    <img src="./imges/html.jpg" width="100">
+    <img src="./images/html.jpg" width="100">
 
     <p>
         HTML (HyperText Markup Language) is the standard language used to create and structure content on the web.
