--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <br>
     The most populorlangauge is c++, and python,java ,and HTML
     <hr>
+    <ol>
     <li>
-        <a href="#c++">
+        <a href="#cpp">
             <h2>c++</h2>
         </a>
 
@@ -33,8 +34,8 @@
         </a>
     </li>
     </ol>
-    <h1 id="c++">c++</h1>
-    <img src="./images/cpp.jpg" width="100"">
+    <h1 id="cpp">c++</h1>
+    <img src="./images/cpp.jpg" width="100">
     <p>
         C++ is a powerful, high-performance programming language that extends the C language with advanced features such
         as object-oriented programming. Created by Bjarne Stroustrup in the early 1980s, it has become one of the most
